--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parse": "^0.1.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
