--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "body-parse": "^0.1.0",
+    "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
     "pug": "^3.0.3"
