--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.18.1",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "pug": "^3.0.3",
     "streamifier": "^0.1.1",
     "tinymce": "^8.2.0"
